<?xml version="1.0" encoding="utf-8"?>
<shortcuts xmlns:android="http://schemas.android.com/apk/res/android">
    <!-- 搜索 -->
    <shortcut
        android:shortcutId="shortcut_search"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_search"
        android:shortcutShortLabel="@string/shortcut_search_short"
        android:shortcutLongLabel="@string/shortcut_search_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.android.purebilibili"
            android:targetClass="com.android.purebilibili.MainActivity"
            android:data="bilipai://search" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- 动态 -->
    <shortcut
        android:shortcutId="shortcut_dynamic"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_dynamic"
        android:shortcutShortLabel="@string/shortcut_dynamic_short"
        android:shortcutLongLabel="@string/shortcut_dynamic_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.android.purebilibili"
            android:targetClass="com.android.purebilibili.MainActivity"
            android:data="bilipai://dynamic" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- 收藏 -->
    <shortcut
        android:shortcutId="shortcut_favorite"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_favorite"
        android:shortcutShortLabel="@string/shortcut_favorite_short"
        android:shortcutLongLabel="@string/shortcut_favorite_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.android.purebilibili"
            android:targetClass="com.android.purebilibili.MainActivity"
            android:data="bilipai://favorite" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>

    <!-- 历史 -->
    <shortcut
        android:shortcutId="shortcut_history"
        android:enabled="true"
        android:icon="@drawable/ic_shortcut_history"
        android:shortcutShortLabel="@string/shortcut_history_short"
        android:shortcutLongLabel="@string/shortcut_history_long">
        <intent
            android:action="android.intent.action.VIEW"
            android:targetPackage="com.android.purebilibili"
            android:targetClass="com.android.purebilibili.MainActivity"
            android:data="bilipai://history" />
        <categories android:name="android.shortcut.conversation" />
    </shortcut>
</shortcuts>
